--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,21 @@
 body {
     color: darkblue;
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
     justify-content: center;
     text-align: center;
+    margin: 0;
+    padding: 0;
+}
+
+#container{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid #DDD;
+    margin: auto;
+}
+
+#container h1{
+    font-size: 20px;
 }
