--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 
 body {
     color: darkblue;
-    font-family: 'Courier New', Courier, monospace, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
     justify-content: center;
     text-align: center;
