--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 
 body {
-    color: darkblue;
+    color: red;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
     justify-content: center;
