--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,23 @@
 
 body {
-    color: blue;
+    color: black;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
     justify-content: center;
     text-align: center;
     margin: 0;
     padding: 0;
+}
+
+.cabecera{
+    background-color: cadetblue;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    color: black;
+    padding: 0;
+    margin: 0;
+    box-shadow: 0px 2px 20px 0px blue;
 }
 
 #container{
